--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3"
   },
