--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.19.2",
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
+    "express-toastr": "^2.0.2",
+    "mongoose": "^8.4.1",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3"
   },
